--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,15 @@
-<header >
+<header>
     <nav class="fixed-top navbar " [ngClass]="{'shadow-sm':top>0}">
-      <div class="container-fluid">
-        <div class="row container-header">
-            <div class="col-lg-12" >
-                <img class="logo-bice mb-md-3 mb-sm-3 mb-3" src="assets/img/Go-Bice-Logo-RGB.png">
-                
+        <div class="container-fluid">
+            <div class="row container-header">
+                <div class="col-lg-12">
+                    <img class="logo-bice mb-md-3 mb-sm-3 mb-3" src="assets/img/Go-Bice-Logo-RGB.png">
+                    <a class="logo-bice mb-md-3 mb-sm-3 mb-3" href="#" target="_blank">Beneficios</a>
+                    <a class="logo-bice mb-md-3 mb-sm-3 mb-3" href="#" target="_blank">Tarifas</a>
+                    <a class="logo-bice mb-md-3 mb-sm-3 mb-3" href="#" target="_blank">Preguntas frecuentes</a>
+                    <button class="logo-bice mb-md-3 mb-sm-3 mb-3">Hazte cliente</button>
+                </div>
             </div>
-        </div> 
-      </div>
-  
+        </div>
     </nav>
-  </header>
+</header>
