--- a/src/app/components/tarifas/tarifas.component.html
+++ b/src/app/components/tarifas/tarifas.component.html
@@ -1,1 +1,56 @@
-<p>tarifas works!</p>
+<div class="tarifas-container">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h2>
+                TARIFAS
+            </h2>
+        
+            <h1>
+                Cuentas claras
+            </h1>
+        
+            <h3>
+                No tenemos planes, el trato es el mismo para todos. 
+            </h3>
+        </div>
+    </div>
+
+    <div class="row text-center">
+        <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 tarifas">
+            <img src="assets/img/sin_costo_de_mantencion.png">
+            <p class="title">Sin costos de mantención</p>
+            <p class="sub-title">No te cobraremos mantención, ni ahora ni nunca</p>
+        </div>
+
+        <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
+            <img src="assets/img/sin_comision.png">
+            <p class="title">Sin comisión en tus compras</p>
+            <p class="sub-title">Las compras nacionales e internacionales no tienen comisión</p>
+        </div>
+
+        <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
+            <img src="assets/img/giros.png">
+            <p class="title">2 giros gratis al mes</p>
+            <p class="sub-title">Al tercer giro te cobraremos 500 pesos</p>
+        </div>
+
+        <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
+            <img src="assets/img/transferencias.png">
+            <p class="title">Transfiere sin costo</p>
+            <p class="sub-title">Todas tus transferencias en Chile son gratis, no importa el banco</p>
+        </div>
+
+        <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
+            <img src="assets/img/tarjeta.png" style="margin-top: 35px;">
+            <p class="title">Tarjeta física</p>
+            <p class="sub-title">Retírala gratis en nuestras sucursales o si prefieres te la enviamos por $4.990</p>
+        </div>
+        
+        <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
+            <img src="assets/img/billetera.png">
+            <p class="title">Límite de abono</p>
+            <p class="sub-title">Puedes tener hasta $3.000.000 en tu cuenta para empezar</p>
+        </div>
+    </div>
+
+</div>
