--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+
+*{
+    font-family: Poppins;
+}
+
+h2{
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+    color: #7E8085;
+}
+
+h3{
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 34px;
+    color: #7E8085;
+}
+
+h1{
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 34px;
+    line-height: 51px;
+    color: #2C2E30;
+}
+
+p{
+    margin:0px!important;
+}
