--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,26 @@
 <header>
-    <nav class="fixed-top navbar " [ngClass]="{'shadow-sm':top>0}">
-        <div class="container-fluid">
-            <div class="row container-header">
-                <div class="col-lg-12">
-                    <img class="logo-bice mb-md-3 mb-sm-3 mb-3" src="assets/img/Go-Bice-Logo-RGB.png">
-                    <a class="logo-bice mb-md-3 mb-sm-3 mb-3" href="#" target="_blank">Beneficios</a>
-                    <a class="logo-bice mb-md-3 mb-sm-3 mb-3" href="#" target="_blank">Tarifas</a>
-                    <a class="logo-bice mb-md-3 mb-sm-3 mb-3" href="#" target="_blank">Preguntas frecuentes</a>
-                    <button class="logo-bice mb-md-3 mb-sm-3 mb-3">Hazte cliente</button>
-                </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <img class="" src="assets/img/Go-Bice-Logo-RGB.png">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+            aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            </ul>
+            <div class="form-inline my-2 my-lg-0">
+                <a class="nav-item nav-link active" href="#">Beneficios <span class="sr-only">(current)</span></a>
+            </div>
+            <div class="form-inline my-2 my-lg-0">
+                <a class="nav-item nav-link" href="#">Tarifas</a>
+            </div>
+            <div class="form-inline my-2 my-lg-0">
+                <a class="nav-item nav-link" href="#">Preguntas frecuentes</a>
+            </div>
+            <div class="form-inline my-2 my-lg-0">
+                <a class="nav-item nav-link" href="#">Hazte cliente</a>
             </div>
         </div>
     </nav>
+
 </header>
