--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<header style="margin: 0px 10% 0px 10%; ">
+    <nav class="navbar navbar-expand-lg">
         <img class="" src="assets/img/Go-Bice-Logo-RGB.png">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
             aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,9 +18,8 @@
                 <a class="nav-item nav-link" href="#">Preguntas frecuentes</a>
             </div>
             <div class="form-inline my-2 my-lg-0">
-                <a class="nav-item nav-link" href="#">Hazte cliente</a>
+                <button type="button" class="btn btn-primary" style="background-color: #1976D2;">Hazte cliente</button>
             </div>
         </div>
     </nav>
-
 </header>
