--- a/src/app/components/tarifas/tarifas.component.less
+++ b/src/app/components/tarifas/tarifas.component.less
@@ -10,6 +10,7 @@
     font-weight: bold;
     font-size: 21px;
     line-height: 31px;
+    color: #2C2E30;
 }
 
 .sub-title{
@@ -17,8 +18,33 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 28px;
+    color: #7E8085;
 }
 
 .tarifas{
     padding: 5px;
+}
+
+h2{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+    color: #7E8085;
+}
+
+h3{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 34px;
+    color: #7E8085;
+}
+
+h1{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 34px;
+    line-height: 51px;
+    color: #2C2E30;
 }
