--- a/src/app/components/tarifas/tarifas.component.html
+++ b/src/app/components/tarifas/tarifas.component.html
@@ -23,13 +23,13 @@
         </div>
 
         <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
-            <img src="assets/img/sin_comision.png">
+            <img src="assets/img/sin_comision.png" class="giros-compras">
             <p class="title">Sin comisión en tus compras</p>
             <p class="sub-title">Las compras nacionales e internacionales no tienen comisión</p>
         </div>
 
         <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
-            <img src="assets/img/giros.png">
+            <img src="assets/img/giros.png" class="giros-compras">
             <p class="title">2 giros gratis al mes</p>
             <p class="sub-title">Al tercer giro te cobraremos 500 pesos</p>
         </div>
@@ -41,13 +41,13 @@
         </div>
 
         <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
-            <img src="assets/img/tarjeta.png" style="margin-top: 35px;">
+            <img src="assets/img/tarjeta.png" class="tarjeta">
             <p class="title">Tarjeta física</p>
             <p class="sub-title">Retírala gratis en nuestras sucursales o si prefieres te la enviamos por $4.990</p>
         </div>
         
         <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
-            <img src="assets/img/billetera.png">
+            <img src="assets/img/billetera.png" class="linea">
             <p class="title">Límite de abono</p>
             <p class="sub-title">Puedes tener hasta $3.000.000 en tu cuenta para empezar</p>
         </div>
