--- a/src/app/components/tarifas/tarifas.component.less
+++ b/src/app/components/tarifas/tarifas.component.less
@@ -3,7 +3,10 @@
     height: 100%;
     background: #F6F8F9;
 }
-
+img{
+    margin-bottom: 27px;
+    
+}
 
 .title{
     font-style: normal;
@@ -47,4 +50,60 @@ h1{
     font-size: 34px;
     line-height: 51px;
     color: #2C2E30;
+}   
+@media (min-width: 576px) {
+    .row{
+        margin-left: 10% !important;
+        margin-right: 10% !important;
+    }
+    h2{
+        margin-top: 95px;
+    }
+    
+    h3{
+        margin-bottom: 86px;
+    }
+
+    .tarifas-container{
+        padding-bottom: 144px;
+    }
+    img{
+        margin-top: 55px;
+    }
+    .tarjeta{
+            margin-bottom: 40px!important;
+            margin-top: 75px!important;
+    }
+    .linea{
+        margin-top: 63px!important;
+    }
+    .giros-compras{
+        margin-top: 60px!important;
+    }
+}
+@media (max-width: 575px) {
+    .tarifas-container{
+        padding-bottom: 87px;
+    }
+    .row{
+        margin-left: 1% !important;
+        margin-right: 1% !important;
+    }
+    img{
+        margin-top: 20px;
+    }
+    .tarjeta{
+        margin-bottom: 40px!important;
+        margin-top: 45px!important;
+    }
+    .linea{
+        margin-top: 33px!important;
+    }
+    h2{
+        margin-top: 92px;
+    }
+    
+    h3{
+        margin-bottom: 28px;
+    }
 }
