--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
 <header style="margin: 0px 10% 0px 10%; ">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background: #fff;">
         <img class="" src="assets/img/Go-Bice-Logo-RGB.png">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+        <button (click)="toggleNavbar()" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
             aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <div class="collapse navbar-collapse show" id="navbarTogglerDemo03" [ngClass]="{ 'show': navbarOpen }">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             </ul>
             <div class="form-inline my-2 my-lg-0">
@@ -23,3 +23,6 @@
         </div>
     </nav>
 </header>
+
+
+
