--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-<app-tarifas></app-tarifas>
+<app-tarifas id="tarifas"></app-tarifas>
 <app-crea-cuenta></app-crea-cuenta>
