--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,13 +9,13 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             </ul>
             <div class="form-inline my-2 my-lg-0">
-                <a class="nav-item nav-link active" href="#">Beneficios <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="#beneficios">Beneficios <span class="sr-only">(current)</span></a>
             </div>
             <div class="form-inline my-2 my-lg-0">
-                <a class="nav-item nav-link" href="#">Tarifas</a>
+                <a class="nav-item nav-link" href="#tarifas">Tarifas</a>
             </div>
             <div class="form-inline my-2 my-lg-0">
-                <a class="nav-item nav-link" href="#">Preguntas frecuentes</a>
+                <a class="nav-item nav-link" href="#preguntasFrecuentes">Preguntas frecuentes</a>
             </div>
             <div class="form-inline my-2 my-lg-0">
                 <button type="button" class="btn btn-primary" style="background-color: #1976D2;">Hazte cliente</button>
