--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,15 +1,15 @@
 <div>
     <div class="row text-center" style="margin: 40px 20% 0 20%;">
-        <div class="col-3">
+        <div class="d-none d-lg-block col-3">
             <p class="opciones">Beneficios</p>
         </div>
-        <div class="col-3">
+        <div class="d-none d-lg-block col-3">
             <p class="opciones">Costos</p>
         </div>
-        <div class="col-3">
+        <div class="d-none d-lg-block col-3">
             <p class="opciones">Preguntas frecuentes</p>
         </div>
-        <div class="col-3">
+        <div class="d-none d-lg-block col-3">
             <p class="opciones">Términos y condiciones</p>
         </div>
         <div class="col-12" style="margin: 30px 0 40px 0;">
