--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -1,14 +1,3 @@
-p{
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 30px;
-    /* identical to box height */
-
-    text-align: center;
-    letter-spacing: 0.19px;
-}
 
 
 .copyright{
@@ -18,4 +7,42 @@ p{
 
 .opciones{
     color: #434A54;
+}
+
+@media (min-width: 576px) {
+    .row{
+        margin-left: 10% !important;
+        margin-right: 10% !important;
+    }
+
+    p{
+        font-family: Poppins;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 30px;
+        /* identical to box height */
+    
+        text-align: center;
+        letter-spacing: 0.19px;
+    }
+}
+
+@media (max-width: 575px) {
+
+    .row{
+        margin-left: 1% !important;
+        margin-right: 1% !important;
+    }
+    p{
+        font-family: Poppins;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 15px;
+        line-height: 24px;
+        /* identical to box height, or 160% */
+
+        text-align: center;
+        letter-spacing: 0.19px;
+    }
 }
