--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -1,5 +1,13 @@
 
 
+p{
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: 0.19px;
+}
+
 .copyright{
    
     color: #8F8F8F;
@@ -14,35 +22,19 @@
         margin-left: 10% !important;
         margin-right: 10% !important;
     }
-
     p{
-        font-family: Poppins;
-        font-style: normal;
-        font-weight: 600;
         font-size: 20px;
         line-height: 30px;
-        /* identical to box height */
-    
-        text-align: center;
-        letter-spacing: 0.19px;
     }
 }
 
 @media (max-width: 575px) {
-
     .row{
         margin-left: 1% !important;
         margin-right: 1% !important;
     }
     p{
-        font-family: Poppins;
-        font-style: normal;
-        font-weight: 600;
         font-size: 15px;
         line-height: 24px;
-        /* identical to box height, or 160% */
-
-        text-align: center;
-        letter-spacing: 0.19px;
     }
 }
