--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -1,6 +1,6 @@
 
 
-p{
+a{
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
@@ -9,7 +9,6 @@ p{
 }
 
 .copyright{
-   
     color: #8F8F8F;
 }
 
@@ -22,8 +21,8 @@ p{
         margin-left: 10% !important;
         margin-right: 10% !important;
     }
-    p{
-        font-size: 20px;
+    a{
+        font-size: 15px;
         line-height: 30px;
     }
 }
@@ -33,7 +32,7 @@ p{
         margin-left: 1% !important;
         margin-right: 1% !important;
     }
-    p{
+    a{
         font-size: 15px;
         line-height: 24px;
     }
