--- a/src/app/components/crea-cuenta/crea-cuenta.component.html
+++ b/src/app/components/crea-cuenta/crea-cuenta.component.html
@@ -9,7 +9,8 @@
     </div>
     <div class="row ">
         <div class="col-12 text-center">
-            <img src="assets/img/Mask_Group.png" >
+            <img src="assets/img/obtén_tu_cuenta.png" style="width: 382px;
+            height: 428px;">
             <img src="assets/img/Group_1.png" class="QR">
         </div>
     </div>
