--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <app-tarifas id="tarifas"></app-tarifas>
+<app-preguntas-frecuentes id="preguntas_frecuentes"></app-preguntas-frecuentes>
 <app-crea-cuenta></app-crea-cuenta>
 <app-footer></app-footer>
