--- a/src/app/components/preguntas-frecuentes/preguntas-frecuentes.component.less
+++ b/src/app/components/preguntas-frecuentes/preguntas-frecuentes.component.less
@@ -1,4 +1,4 @@
-.tarifas-container{
+.preguntas-container{
   width: 100%;
   height: 100%;
   background: #FFFFFF;
@@ -11,9 +11,13 @@ img{
 .title{
   font-style: normal;
   font-weight: bold;
+  //font-size: 24px;
+  //line-height: 36px;
   font-size: 21px;
   line-height: 31px;
+  text-align: left;
   color: #2C2E30;
+
 }
 
 .sub-title{
@@ -22,10 +26,6 @@ img{
   font-size: 16px;
   line-height: 28px;
   color: #7E8085;
-}
-
-.tarifas{
-  padding: 5px;
 }
 
 h2{
@@ -64,22 +64,14 @@ h1{
       margin-bottom: 86px;
   }
 
-  .tarifas-container{
-      padding-bottom: 144px;
-  }
   img{
       margin-top: 55px;
   }
-  .tarjeta{
-          margin-bottom: 40px!important;
-          margin-top: 75px!important;
-  }
+
   .linea{
       margin-top: 63px!important;
   }
-  .giros-compras{
-      margin-top: 60px!important;
-  }
+
 }
 @media (max-width: 575px) {
   .tarifas-container{
@@ -106,4 +98,8 @@ h1{
   h3{
       margin-bottom: 28px;
   }
+  .title{
+    font-size: 18px;
+    line-height: 24px;
+}
 }
