--- a/src/app/components/beneficios/beneficios.component.html
+++ b/src/app/components/beneficios/beneficios.component.html
@@ -16,7 +16,7 @@
             <div class="col-12">
                 <div class="row tarjeta">
                     <div class="col-4">
-                        <img src="assets/img/celu.png">
+                        <img src="assets/img/celular.svg">
                     </div>
                     <div class="col-8">
                         <p class="title">Todo desde tu celular</p>
@@ -26,7 +26,7 @@
 
                 <div class="row tarjeta">
                     <div class="col-4">
-                        <img src="assets/img/tarjeta2.png">
+                        <img src="assets/img/otarjeta.svg">
                     </div>
                     <div class="col-8">
                         <p class="title">Obtén tu tarjeta física</p>
@@ -36,7 +36,7 @@
 
                 <div class="row tarjeta">
                     <div class="col-4">
-                        <img src="assets/img/transferencias.png">
+                        <img src="assets/img/transfiere.svg">
                     </div>
                     <div class="col-8">
                         <p class="title">Transfiere a tus amigos</p>
@@ -53,27 +53,27 @@
 
             <div class="row text-center">
                 <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 marcas">
-                    <img src="assets/img/uber.png">
+                    <img src="assets/img/uber.svg">
                 </div>
         
                 <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 marcas">
-                    <img src="assets/img/netflix.png">
+                    <img src="assets/img/NETFLIX.svg">
                 </div>
         
                 <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 marcas">
-                    <img src="assets/img/uber.png">
+                    <img src="assets/img/Amazon.svg">
                 </div>
         
                 <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 marcas">
-                    <img src="assets/img/netflix.png">
+                    <img src="assets/img/Group.svg">
                 </div>
         
                 <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 marcas">
-                    <img src="assets/img/uber.png">
+                    <img src="assets/img/Spotify.svg">
                 </div>
                 
                 <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 marcas">
-                    <img src="assets/img/netflix.png">
+                    <img src="assets/img/Aliexpress.svg">
                 </div>
             </div>
         
