--- a/src/app/components/preguntas-frecuentes/preguntas-frecuentes.component.less
+++ b/src/app/components/preguntas-frecuentes/preguntas-frecuentes.component.less
@@ -3,10 +3,6 @@
   height: 100%;
   background: #FFFFFF;
 }
-img{
-  margin-bottom: 27px;
-  
-}
 
 .title{
   font-style: normal;
@@ -23,8 +19,9 @@ img{
 .sub-title{
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
-  line-height: 28px;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: left;
   color: #7E8085;
 }
 
@@ -53,8 +50,8 @@ h1{
 }   
 @media (min-width: 576px) {
   .row{
-      margin-left: 10% !important;
-      margin-right: 10% !important;
+      margin-left: 5% !important;
+      margin-right: 5% !important;
   }
   h2{
       margin-top: 95px;
@@ -64,32 +61,18 @@ h1{
       margin-bottom: 86px;
   }
 
-  img{
-      margin-top: 55px;
-  }
-
-  .linea{
-      margin-top: 63px!important;
-  }
+  .preguntas-container{
+    padding-bottom: 144px;
+}
 
 }
 @media (max-width: 575px) {
-  .tarifas-container{
+  .preguntas-container{
       padding-bottom: 87px;
   }
   .row{
       margin-left: 1% !important;
       margin-right: 1% !important;
-  }
-  img{
-      margin-top: 20px;
-  }
-  .tarjeta{
-      margin-bottom: 40px!important;
-      margin-top: 45px!important;
-  }
-  .linea{
-      margin-top: 33px!important;
   }
   h2{
       margin-top: 92px;
