--- a/src/app/components/preguntas-frecuentes/preguntas-frecuentes.component.html
+++ b/src/app/components/preguntas-frecuentes/preguntas-frecuentes.component.html
@@ -1,81 +1,94 @@
 <div class="preguntas-container">
     <div class="row">
+
         <div class="col-12 text-center">
             <h2>PREGUNTAS FRECUENTES</h2>
             <h1>Resolvamos algunas dudas</h1>
         </div>
+
+        <div class="row justify-content-center mt-5">
+
+            <div class="col-md-6 d-none d-sm-none d-md-block">
+                <img src=" assets/img/brand.png " style="width: 100%;" />
+            </div>
+
+            <div class="col-md-6">
+                <mat-accordion [multi]="false">
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title class="title">
+                                ¿Qué es GO BICE?
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+
+                        <p class="sub-title">
+                            Es la primera cuenta vista del Bancoo BICE, que te permite comprar donde quieras, tanto en internet como en comercios físicos, retirar plata en cajeros automáticos y transferir a quién quieras.
+                        </p>
+                    </mat-expansion-panel>
+
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title class="title">
+                                ¿Qué es una cuenta vista?
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <p class="sub-title">
+                            TEXTO
+                        </p>
+                    </mat-expansion-panel>
+
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title class="title">
+                                ¿Cuáles son los requisitos?
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <p class="sub-title">
+                            TEXTO
+                        </p>
+                    </mat-expansion-panel>
+
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title class="title">
+                                ¿Cómo la obtengo?
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <p class="sub-title">
+                            TEXTO
+                        </p>
+                    </mat-expansion-panel>
+
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title class="title">
+                                ¿Cómo la uso?
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <p class="sub-title">
+                            TEXTO
+                        </p>
+                    </mat-expansion-panel>
+
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title class="title">
+                                ¿Cómo ganan plata?
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <p class="sub-title">
+                            TEXTO
+                        </p>
+                    </mat-expansion-panel>
+
+                </mat-accordion>
+            </div>
+
+            <div class="col-md-6 d-block d-sm-block d-md-none">
+                <img src=" assets/img/brand.png " style="width: 100%;" />
+            </div>
+
+        </div>
+
     </div>
-
-    <div class="row text-center">
-
-        <div class="col-md-6 d-none d-sm-block">
-            <img src=" assets/img/preguntas.svg " style="width: 300px;" />
-        </div>
-        <div class="col-md-6">
-            <mat-accordion [multi]="true">
-                <mat-expansion-panel>
-                    <mat-expansion-panel-header>
-                        <mat-panel-title class="title">
-                            ¿Qué es GO BICE?
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    Es la primera cuenta vista del Bancoo BICE, que te permite comprar donde quieras, tanto en internet como en comercios físicos, retirar plata en cajeros automáticos y transferir a quién quieras.
-                </mat-expansion-panel>
-
-                <mat-expansion-panel>
-                    <mat-expansion-panel-header>
-                        <mat-panel-title class="title">
-                            ¿Qué es una cuenta vista?
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    Texto
-                </mat-expansion-panel>
-
-                <mat-expansion-panel>
-                    <mat-expansion-panel-header>
-                        <mat-panel-title class="title">
-                            ¿Cuáles son los requisitos?
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    Texto
-                </mat-expansion-panel>
-
-                <mat-expansion-panel>
-                    <mat-expansion-panel-header>
-                        <mat-panel-title class="title">
-                            ¿Cómo la obtengo?
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    Texto
-                </mat-expansion-panel>
-
-                <mat-expansion-panel>
-                    <mat-expansion-panel-header>
-                        <mat-panel-title class="title">
-                            ¿Cómo la uso?
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    Texto
-                </mat-expansion-panel>
-
-                <mat-expansion-panel>
-                    <mat-expansion-panel-header>
-                        <mat-panel-title class="title">
-                            ¿Cómo ganan plata?
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    Texto
-                </mat-expansion-panel>
-
-            </mat-accordion>
-        </div>
-
-        <div class="col-md-6 d-block d-sm-block d-md-none">
-            <img src=" assets/img/preguntas.svg " style="width: 300px;" />
-        </div>
-
-    </div>
-
-
-
 </div>
