--- a/src/app/components/beneficios/beneficios.component.html
+++ b/src/app/components/beneficios/beneficios.component.html
@@ -15,30 +15,30 @@
         <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
             <div class="col-12">
                 <div class="row tarjeta">
-                    <div class="col-4">
+                    <div class="col-4 col-lg-4 col-xl-4 col-md-12 col-sm-12">
                         <img src="assets/img/celular.svg">
                     </div>
-                    <div class="col-8">
+                    <div class="col-8 col-lg-8 col-xl-8 col-md-12 col-sm-12">
                         <p class="title">Todo desde tu celular</p>
                         <p class="sub-title">Sin trámites ni papeleos</p>
                     </div>
                 </div>
 
                 <div class="row tarjeta">
-                    <div class="col-4">
+                    <div class="col-4 col-lg-4 col-xl-4 col-md-12 col-sm-12">
                         <img src="assets/img/otarjeta.svg">
                     </div>
-                    <div class="col-8">
+                    <div class="col-8 col-lg-8 col-xl-8 col-md-12 col-sm-12">
                         <p class="title">Obtén tu tarjeta física</p>
                         <p class="sub-title">Tus compras en Chile y en el extranjero no tienen comisión</p>
                     </div>
                 </div>
 
                 <div class="row tarjeta">
-                    <div class="col-4">
+                    <div class="col-4 col-lg-4 col-xl-4 col-md-12 col-sm-12">
                         <img src="assets/img/transfiere.svg">
                     </div>
-                    <div class="col-8">
+                    <div class="col-8 col-lg-8 col-xl-8 col-md-12 col-sm-12">
                         <p class="title">Transfiere a tus amigos</p>
                         <p class="sub-title">Gratis y para siempre, no importa el banco de destino</p>
                     </div>
@@ -52,27 +52,27 @@
             </div>
 
             <div class="row text-center">
-                <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 marcas">
+                <div class="col-12 col-lg-12 col-xl-6 col-md-12 col-sm-12 marcas">
                     <img src="assets/img/uber.svg">
                 </div>
         
-                <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 marcas">
+                <div class="col-12 col-lg-12 col-xl-6 col-md-12 col-sm-12 marcas">
                     <img src="assets/img/NETFLIX.svg">
                 </div>
         
-                <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 marcas">
+                <div class="col-12 col-lg-12 col-xl-6 col-md-12 col-sm-12 marcas">
                     <img src="assets/img/Amazon.svg">
                 </div>
         
-                <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 marcas">
+                <div class="col-12 col-lg-12 col-xl-6 col-md-12 col-sm-12 marcas">
                     <img src="assets/img/Group.svg">
                 </div>
         
-                <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 marcas">
+                <div class="col-12 col-lg-12 col-xl-6 col-md-12 col-sm-12 marcas">
                     <img src="assets/img/Spotify.svg">
                 </div>
                 
-                <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12 marcas">
+                <div class="col-12 col-lg-12 col-xl-6 col-md-12 col-sm-12 marcas">
                     <img src="assets/img/Aliexpress.svg">
                 </div>
             </div>
