--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-hazte-cliente id="cliente"></app-hazte-cliente>
 <app-beneficios></app-beneficios>
 <app-tarifas id="tarifas"></app-tarifas>
 <app-preguntas-frecuentes id="preguntas_frecuentes"></app-preguntas-frecuentes>
