ajuste diseño hazte cliente y respuestas

--- a/src/app/components/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/components/hazte-cliente/hazte-cliente.component.html
@@ -7,11 +7,12 @@
             <div class="col-md-6 nopadding texto">
                 <p class="titulo"> Independízate y maneja tus lucas con tu primera cuenta BICE </p>
                 <p class="subTitulo">Obténla en 5 minutos de forma 100% digital</p>
-
-                <button type="button" class="btn">Hazte cliente</button>
+                <div class="mt-4">
+                    <button type="button" class="btn">Hazte cliente</button>
+                </div>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6 imagen">
 
                 <img src=" assets/img/image_header.png " style="max-width: 100%;" />
             </div>
