--- a/src/app/components/preguntas-frecuentes/preguntas-frecuentes.component.html
+++ b/src/app/components/preguntas-frecuentes/preguntas-frecuentes.component.html
@@ -23,7 +23,7 @@
                         </mat-expansion-panel-header>
 
                         <p class="sub-title">
-                            Es la primera cuenta vista del Bancoo BICE, que te permite comprar donde quieras, tanto en internet como en comercios físicos, retirar plata en cajeros automáticos y transferir a quién quieras.
+                            La cuenta Go BICE es una cuenta vista con tarjeta de débito, que puede recibir abonos y transferencias desde cualquier banco, con la cual se puede girar y comprar en Chile y en el exterior, además de transferir en forma electrónica.
                         </p>
                     </mat-expansion-panel>
 
@@ -34,7 +34,7 @@
                             </mat-panel-title>
                         </mat-expansion-panel-header>
                         <p class="sub-title">
-                            TEXTO
+                            Es una cuenta que permite realizar compras, transferencias electrónicas y depositar dinero para girarlo después mediante un cajero automático.
                         </p>
                     </mat-expansion-panel>
 
@@ -45,7 +45,7 @@
                             </mat-panel-title>
                         </mat-expansion-panel-header>
                         <p class="sub-title">
-                            TEXTO
+                            Debes ser mayor de 18 años, estudiante universitario, acreditar domicilio y tener un número móvil.
                         </p>
                     </mat-expansion-panel>
 
@@ -56,7 +56,7 @@
                             </mat-panel-title>
                         </mat-expansion-panel-header>
                         <p class="sub-title">
-                            TEXTO
+                            Para obtenerla debes realizar el enrolamiento a través de tu teléfono celular.
                         </p>
                     </mat-expansion-panel>
 
@@ -67,18 +67,7 @@
                             </mat-panel-title>
                         </mat-expansion-panel-header>
                         <p class="sub-title">
-                            TEXTO
-                        </p>
-                    </mat-expansion-panel>
-
-                    <mat-expansion-panel>
-                        <mat-expansion-panel-header>
-                            <mat-panel-title class="title">
-                                ¿Cómo ganan plata?
-                            </mat-panel-title>
-                        </mat-expansion-panel-header>
-                        <p class="sub-title">
-                            TEXTO
+                            La podrás utilizar desde la App Banco BICE; también la podrás utilizar a través de tu tarjeta física para compras presenciales nacionales e internacionales y en e-commerce. ¡Recuerda descargar tu BICE pass para transaccionar de forma segura!
                         </p>
                     </mat-expansion-panel>
 
