--- a/src/app/components/hazte-cliente/hazte-cliente.component.less
+++ b/src/app/components/hazte-cliente/hazte-cliente.component.less
@@ -18,9 +18,10 @@
     font-weight: 600;
     //font-size: 48px;
     //line-height: 56px;
-    font-size: 26px;
-    line-height: 30px;
-  color: #FFFFFF;
+    font-size: 33px;
+    line-height: 37px;
+    color: #FFFFFF;
+    padding-top: 100px;
 }
 
 .subTitulo{
@@ -30,21 +31,21 @@
     //line-height: 56px;
     font-size: 13px;
     line-height: 30px;
-  color: #FFFFFF;
+    color: #FFFFFF;
+    padding-top: 20px;
 }
 
 
 .btn {
     border-radius: 8px;
-    background-color: #FFFFFF;
+    background: #F5F7FA;
     color: black;
     border: 1px solid #FFFFFF;
     font-size: 21px;
-    //width: 263px;
     width: 100%;
     max-width: 203px;
-    //box-shadow: 0 .3rem 1rem rgba(0, 0, 0, .15);
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.30);
+    //padding: 8px 48px;
 
     font-weight: 300;
     font-style: normal;
@@ -53,7 +54,13 @@
     line-height: 32px;
     text-align: center;
     color: #1976D2;
-  
+    
+    
+  }
+
+  .imagen{
+    padding-top: 50px;
+
   }
      
   @media (min-width: 576px) {
@@ -61,11 +68,7 @@
         margin-left: 5% !important;
         margin-right: 5% !important;
     }
-     
-    .cliente-container{
-      padding-bottom: 144px;
-  }
-  
+ 
   }
   @media (max-width: 575px) {
     .cliente-container{
