--- a/src/app/components/crea-cuenta/crea-cuenta.component.html
+++ b/src/app/components/crea-cuenta/crea-cuenta.component.html
@@ -1,7 +1,7 @@
 <div class="container-cuenta d-none d-sm-block">
     <div class="row">
         <div class="col-12 text-center">
-            <p class="title">Crea tu cuenta</p>
+            <p class="title" style="margin-top: 95px!important;">Crea tu cuenta</p>
             <p class="sub-title">No tienes que descargar nada, simplemente escanea el código QR con tu celular,
              abrirá la página www.gobice.cl/inicio</p>
         </div>
