--- a/src/app/components/hazte-cliente/hazte-cliente.component.less
+++ b/src/app/components/hazte-cliente/hazte-cliente.component.less
@@ -1,9 +1,8 @@
 .cliente-container{
     //position: absolute;
     background: #FFFFFF;
-    background-image: url("/assets/img/background.png");
+    background-image: url("../../../assets/img/background.png");
     background-size: 100% 100%;
-
    
     
   }
