--- a/src/app/components/preguntas-frecuentes/preguntas-frecuentes.component.html
+++ b/src/app/components/preguntas-frecuentes/preguntas-frecuentes.component.html
@@ -1,4 +1,4 @@
-<div class="preguntas-container">
+<div class="preguntas-container" id="preguntasFrecuentes">
     <div class="row">
 
         <div class="col-12 text-center">
