--- a/src/app/components/tarifas/tarifas.component.html
+++ b/src/app/components/tarifas/tarifas.component.html
@@ -1,4 +1,4 @@
-<div class="tarifas-container">
+<div class="tarifas-container" id="tarifas">
     <div class="row">
         <div class="col-12 text-center">
             <h2>
