--- a/src/app/components/beneficios/beneficios.component.html
+++ b/src/app/components/beneficios/beneficios.component.html
@@ -1,4 +1,4 @@
-<div class="tarifas-container">
+<div class="tarifas-container" id="beneficios">
     <div class="row" style="margin-bottom: 80px;">
         <div class="col-12 text-center">
             <h2>
