--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,16 +1,16 @@
 <div>
     <div class="row text-center" style="margin: 40px 20% 0 20%;">
         <div class="d-none d-lg-block col-3">
-            <a class="opciones" href="#">Beneficios</a>
+            <a class="opciones" href="#beneficios">Beneficios</a>
         </div>
         <div class="d-none d-lg-block col-3">
-            <a class="opciones" href="#">Costos</a>
+            <a class="opciones" href="#tarifas">Tarifas</a>
         </div>
         <div class="d-none d-lg-block col-3">
-            <a class="opciones" href="#">Preguntas frecuentes</a>
+            <a class="opciones" href="#preguntasFrecuentes">Preguntas frecuentes</a>
         </div>
         <div class="d-none d-lg-block col-3">
-            <a class="opciones" href="#">Términos y condiciones</a>
+            <a class="opciones" href="assets/docs/Terminos_y_Condiciones.pdf" target="_blank">Términos y condiciones</a>
         </div>
         <div class="col-12" style="margin: 30px 0 40px 0;">
             <p class="copyright">Copyright 2020 GO BICE. Una iniciativa de  <img style="height: 20px;" src="assets/img/Logo.png"></p>
