--- a/src/app/components/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/components/hazte-cliente/hazte-cliente.component.html
@@ -4,11 +4,12 @@
 
         <div class="row justify-content-center mt-5">
 
-            <div class="col-md-6 nopadding texto" >
+            <div class="col-md-6 nopadding texto">
                 <p class="titulo"> Independízate y maneja tus lucas con tu primera cuenta BICE </p>
                 <p class="subTitulo">Obténla en 5 minutos de forma 100% digital</p>
                 <div class="mt-4">
-                    <button type="button" class="btn">Hazte cliente</button>
+                    <button *ngIf="isMobile" onclick="window.location.href='https://www.bice.cl/go-bice/'" type="button" class="btn">Hazte cliente</button>
+                    <button *ngIf="!isMobile" onclick="window.location.href='#tarifas'" type="button" class="btn">Hazte cliente</button>
                 </div>
             </div>
 
