--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
                 <a class="nav-item nav-link" href="#preguntasFrecuentes">Preguntas frecuentes</a>
             </div>
             <div class="form-inline my-2 my-lg-0">
-                <button type="button" class="btn btn-primary" style="background-color: #1976D2;">Hazte cliente</button>
+                <button type="button" class="btn btn-primary" style="background-color: #1976D2;"><a href="{{url}}"></a> Hazte cliente</button>
             </div>
         </div>
     </nav>
