--- a/src/styles.less
+++ b/src/styles.less
@@ -149,3 +149,13 @@ p{
 html {
   scroll-behavior: smooth;
 }
+
+
+@media (max-width: 575px) {
+  .navbar{
+    padding: 0.5rem 0rem!important;
+    margin-left: -15px!important;
+    width: 100%;
+  }
+}
+
