--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,7 +13,7 @@
             <a class="opciones" href="assets/docs/Terminos_y_Condiciones.pdf" target="_blank">Términos y condiciones</a>
         </div>
         <div class="col-12" style="margin: 30px 0 40px 0;">
-            <p class="copyright">Copyright 2020 GO BICE. Una iniciativa de  <img style="height: 20px;" src="assets/img/Logo.png"></p>
+            <p class="copyright">Copyright 2020 GO BICE. Una iniciativa de  <img style="height: 20px; margin-left: 2px;" src="assets/img/Logo.png"></p>
         </div>
     </div>
 </div>
