--- a/src/app/components/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/components/hazte-cliente/hazte-cliente.component.html
@@ -8,12 +8,16 @@
                 <p class="titulo"> Independízate y maneja tus lucas con tu primera cuenta BICE </p>
                 <p class="subTitulo">Obténla en 5 minutos de forma 100% digital</p>
                 <div class="mt-4">
+                    <!--
                     <div class="d-none d-sm-none d-md-flex">
-                        <button onclick="window.location.href='https://www.bice.cl/go-bice/'" type="button" class="btn">Hazte cliente</button>
+
+                        <button onclick="window.location.href={url}" type="button" class="btn">Hazte cliente</button>
                     </div>
                     <div class="d-block d-sm-block d-md-none">
                         <button onclick="window.location.href='#creaCliente'" type="button" class="btn">Hazte cliente</button>
                     </div>
+                    -->
+                    <a class="btn btn-primary" href="{{url}}" style="background-color: #1976D2;" style="text-decoration: none;">Hazte cliente</a>
 
                 </div>
             </div>
