--- a/src/app/components/beneficios/beneficios.component.less
+++ b/src/app/components/beneficios/beneficios.component.less
@@ -66,10 +66,15 @@ h1{
 
 
 
+
+
+
 @media (min-width: 576px) {
-    .row{
-        margin-left: 10% !important;
-        margin-right: 10% !important;
+   
+
+    .tarifas-container{
+        padding-left: 10% !important;
+        padding-right: 10% !important;
     }
     
 }
@@ -77,9 +82,9 @@ h1{
     .tarifas-container{
         padding-bottom: 87px;
     }
-    .row{
-        margin-left: 1% !important;
-        margin-right: 1% !important;
+    .tarifas-container{
+        padding-left: 1% !important;
+        padding-right: 1% !important;
     }
     img{
        
