css distribucion befeficios

--- a/src/app/components/beneficios/beneficios.component.html
+++ b/src/app/components/beneficios/beneficios.component.html
@@ -52,29 +52,32 @@
             </div>
 
             <div class="row text-center">
-                <div class="col-12 col-lg-4 col-xl-4 col-md-12 col-sm-12 marcas">
-                    <img src="assets/img/uber.svg">
+                <div class="col-6 col-lg-4 col-xl-4 col-md-6 col-sm-6 marcas">
+                    <img src="assets/img/bene1.png">
+                    <p class="txtBeneficios">Uber, Cabiby, Didi</p>
                 </div>
         
-                <div class="col-12 col-lg-4 col-xl-4 col-md-12 col-sm-12 marcas">
-                    <img src="assets/img/NETFLIX.svg">
+                <div class="col-6 col-lg-4 col-xl-4 col-md-6 col-sm-6 marcas">
+                    <img src="assets/img/bene1.png">
+                    <p class="txtBeneficios">Rappi, Uber eats</p>
                 </div>
         
-                <div class="col-12 col-lg-4 col-xl-4 col-md-12 col-sm-12 marcas">
-                    <img src="assets/img/Amazon.svg">
+                <div class="col-6 col-lg-4 col-xl-4 col-md-6 col-sm-6 marcas">
+                    <img src="assets/img/bene1.png">
+                    <p class="txtBeneficios">Netflix, HBO Go, Amazon Prime</p>
                 </div>
         
-                <div class="col-12 col-lg-4 col-xl-4 col-md-12 col-sm-12 marcas">
-                    <img src="assets/img/Group.svg">
+                <div class="col-6 col-lg-6 col-xl-6 col-md-6 col-sm-6 marcas">
+                    <img src="assets/img/bene1.png">
+                    <p class="txtBeneficios">Spotify, Apple Music</p>
                 </div>
         
-                <div class="col-12 col-lg-4 col-xl-4 col-md-12 col-sm-12 marcas">
-                    <img src="assets/img/Spotify.svg">
+                <div class="col-12 col-lg-6 col-xl-6 col-md-12 col-sm-12 marcas">
+                    <img src="assets/img/bene1.png">
+                    <p class="txtBeneficios">Amazon, Aliexpress, Ebay</p>
                 </div>
                 
-                <div class="col-12 col-lg-4 col-xl-4 col-md-12 col-sm-12 marcas">
-                    <img src="assets/img/Aliexpress.svg">
-                </div>
+               
             </div>
         
 
