--- a/src/app/components/beneficios/beneficios.component.less
+++ b/src/app/components/beneficios/beneficios.component.less
@@ -66,6 +66,19 @@ h1{
 
 
 
+.txtBeneficios{
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    /* identical to box height, or 150% */
+
+    text-align: center;
+
+    color: #2F3841;
+}
+
 
 
 
