--- a/src/app/components/beneficios/beneficios.component.html
+++ b/src/app/components/beneficios/beneficios.component.html
@@ -53,27 +53,27 @@
 
             <div class="row text-center">
                 <div class="col-6 col-lg-4 col-xl-4 col-md-6 col-sm-6 marcas">
-                    <img src="assets/img/bene1.png">
+                    <img style="width: 88px;" src="assets/img/bene1.jpg">
                     <p class="txtBeneficios">Uber, Cabiby, Didi</p>
                 </div>
         
                 <div class="col-6 col-lg-4 col-xl-4 col-md-6 col-sm-6 marcas">
-                    <img src="assets/img/bene1.png">
+                    <img style="width: 88px;" src="assets/img/bene2.jpg">
                     <p class="txtBeneficios">Rappi, Uber eats</p>
                 </div>
         
                 <div class="col-6 col-lg-4 col-xl-4 col-md-6 col-sm-6 marcas">
-                    <img src="assets/img/bene1.png">
+                    <img style="width: 88px;" src="assets/img/bene3.jpg">
                     <p class="txtBeneficios">Netflix, HBO Go, Amazon Prime</p>
                 </div>
         
                 <div class="col-6 col-lg-6 col-xl-6 col-md-6 col-sm-6 marcas">
-                    <img src="assets/img/bene1.png">
+                    <img style="width: 88px;" src="assets/img/bene4.jpg">
                     <p class="txtBeneficios">Spotify, Apple Music</p>
                 </div>
         
                 <div class="col-12 col-lg-6 col-xl-6 col-md-12 col-sm-12 marcas">
-                    <img src="assets/img/bene1.png">
+                    <img style="width: 88px;" src="assets/img/bene5.jpg">
                     <p class="txtBeneficios">Amazon, Aliexpress, Ebay</p>
                 </div>
                 
