cambio imagen fondo inicio y qr

--- a/src/app/components/crea-cuenta/crea-cuenta.component.html
+++ b/src/app/components/crea-cuenta/crea-cuenta.component.html
@@ -2,16 +2,15 @@
     <div class="row">
         <div class="col-12 text-center">
             <p class="title" style="margin-top: 95px!important;">Crea tu cuenta</p>
-            <p class="sub-title">No tienes que descargar nada, simplemente escanea el código QR con tu celular,
-             abrirá la página www.gobice.cl/inicio</p>
+            <p class="sub-title">No tienes que descargar nada, simplemente escanea el código QR con tu celular, abrirá la página www.gobice.cl/inicio</p>
         </div>
-        
+
     </div>
     <div class="row ">
         <div class="col-12 text-center">
             <img src="assets/img/obtén_tu_cuenta.png" style="width: 382px;
             height: 428px;">
-            <img src="assets/img/Group_1.png" class="QR">
+            <img src="assets/img/qr-code.svg" class="QR">
         </div>
     </div>
 </div>
