--- a/src/app/components/hazte-cliente/hazte-cliente.component.less
+++ b/src/app/components/hazte-cliente/hazte-cliente.component.less
@@ -1,8 +1,9 @@
 .cliente-container{
     //position: absolute;
     background: #FFFFFF;
-    background-image: url("../../../assets/img/background.png");
+    background-image: url("../../../assets/img/header_2.png");
     background-size: 100% 100%;
+    background-repeat: no-repeat;
    
     
   }
@@ -71,6 +72,8 @@
   }
   @media (max-width: 575px) {
     .cliente-container{
+        background-image: url("../../../assets/img/header_2_mobile.png");
+        background-size: 100% 65%;
         padding-bottom: 87px;
     }
     .row{
